Project/networking-concept/allow-ingress-from-namespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: deny-all-ingress
spec:
  podSelector:
     matchLabels:
        app: mysql
  ingress:
    - from:
        - namespaceSelector:
              matchLabels:
                   env: test
