Project/networking-concept/deny-all-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: foo-deny-external-egress
  namespace: mysql
spec:
  podSelector:
   matchLabels:
     app: mysql
  policyTypes:
   - Egress
  egress: []
